# scraperr

./: Cargo.toml  LICENSE
crates/api/: Cargo.toml  build.rs
crates/api/src/: config.rs  error.rs  main.rs
crates/api/src/extractors/: auth.rs
crates/api/src/grpc/: interceptor.rs  mod.rs
crates/api/src/grpc/services/: auth.rs  jobs.rs
crates/api/src/handlers/: ai.rs  auth.rs  cron.rs  jobs.rs  mod.rs  stats.rs
crates/api/src/middleware/: oidc.rs
crates/core/: Cargo.toml
crates/core/src/domain/: cron.rs  job.rs  mod.rs  user.rs
crates/core/src/services/: ai.rs  auth.rs  cron.rs  jobs.rs  stats.rs
crates/db/: Cargo.toml
crates/db/src/entities/: cron_job.rs  job.rs  mod.rs  user.rs
crates/db/src/repositories/: cron_job.rs  job.rs  mod.rs  user.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20240101_000001_initial.rs  main.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs  main.rs
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  docker-compose.yml  nginx.conf
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/components/: JobForm.tsx  JobsTable.tsx  Layout.tsx  Navbar.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/routes/: CronJobs.tsx  Home.tsx  JobDetail.tsx  Statistics.tsx
frontend/src/stores/: auth.ts  jobs.ts
frontend/src/types/: index.ts
proto/: auth.proto  jobs.proto
