[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/core",
    "crates/db",
    "crates/migration",
    "crates/worker",
]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
sea-orm = { version = "1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tonic-build = "0.14"
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
reqwest = { version = "0.13", features = ["json", "stream"] }
scraper = "0.26"
tokio-stream = "0.1"
